Desktop tab and form fixes, Mobile footer spacing

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -7,8 +7,7 @@
 	grid-auto-flow:row;
 	align-items:center;
 	justify-items:center;
-		padding: 1rem;
-	margin-bottom:125px;
+	padding: 1rem 1rem 175px;
 
 	@media (min-width:768px){
 		@include section-shim;
